# ubu-orchestrator

./: CHANGELOG.md  CODEGEN.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  codegen-task.yml  contract-change.yml  design-sync.yml
.github/workflows/: ci.yml
examples/: generate_openapi.rs  run_fixture_loop.rs
fixtures/fixture-loop/: expected-next-action.json  github-small.json
fixtures/github/: issues-small.json
openapi/: README.md  openapi.generated.json
src/: config.rs  errors.rs  instance_mode.rs  lib.rs  main.rs  openapi.rs  router.rs  state.rs  tracing.rs
src/adapters/: github_adapter.rs  mod.rs  planner_adapter.rs  store_adapter.rs
src/api/: bootstrap.rs  calendar.rs  desktop.rs  github.rs  health.rs  mod.rs  next_action.rs  planning.rs  projection.rs  recalculation.rs  reports.rs  user_action.rs
src/reports/: human_complete_report.rs  mod.rs  planning_analysis.rs  risk_report.rs
src/services/: bootstrap_service.rs  desktop_session_service.rs  import_service.rs  log_service.rs  mod.rs  next_action_service.rs  planning_service.rs  projection_service.rs  recalculation_service.rs  report_service.rs
tests/: bootstrap.rs  fixture_loop.rs  github_import.rs  health.rs  next_action.rs  planning_o9.rs  planning_request_builder.rs  projection_approval.rs  projection_preview.rs  reports.rs  user_actions.rs
